# MASArena

./: README-branch.md  pyproject.toml  requirements.txt
ChatDev/CompanyConfig/Art/: ChatChainConfig.json
ChatDev/Humaneval_benchmark/: README.md  base_code_evaluator.py  base_evaluator.py  benchmark_results.json  data_structures.py  humaneval_evaluator.py  run_100_tasks.py  run_benchmark.py  test_benchmark.py
ChatDev/WareHouse/Gomoku_DefaultOrganization_20250718152447/: gomoku_game.py  gomoku_gui.py  manual.md
ChatDev/WareHouse/Humaneval_HumanEval_0_DefaultOrganization_20250721151501/: .py  meta.txt
ChatDev/WareHouse/Humaneval_HumanEval_100_DefaultOrganization_20250721142853/: .py  meta.txt
ChatDev/WareHouse/Humaneval_HumanEval_102_DefaultOrganization_20250721121521/: .py  meta.txt
ChatDev/WareHouse/Humaneval_HumanEval_103_DefaultOrganization_20250721123948/: .py  meta.txt
ChatDev/WareHouse/Humaneval_HumanEval_104_DefaultOrganization_20250721151822/: .py  meta.txt
ChatDev/WareHouse/Humaneval_HumanEval_106_DefaultOrganization_20250721150302/: .py  meta.txt
ChatDev/WareHouse/Humaneval_HumanEval_10_DefaultOrganization_20250721134458/: .py  meta.txt
ChatDev/WareHouse/Humaneval_HumanEval_110_DefaultOrganization_20250721143741/: .py  meta.txt
ChatDev/WareHouse/Humaneval_HumanEval_111_DefaultOrganization_20250721131606/: .py  meta.txt
ChatDev/WareHouse/Humaneval_HumanEval_112_DefaultOrganization_20250721145901/: .py  meta.txt
ChatDev/WareHouse/Humaneval_HumanEval_114_DefaultOrganization_20250721134207/: .py  (+1 more)
ChatDev/chatdev/: chat_chain.py  composed_phase.py  phase.py  statistics.py
ChatDev/ecl/: codes.py  ecl.py  experience.py  graph.py
JARVIS/hugginggpt/: README.md  config.py  evaluation_framework.py  evaluation_interface.py  hugginggpt.py  response_generator.py  run_benchmark.py  task_executor.py  task_planner.py
llm-debate/evaluators/: aime_evaluator.py  bbh_evaluator.py  humaneval_evaluator.py  mmlu_pro_evaluator.py
llm-debate/llm_debate/: run_all_tests.py  run_benchmark.py
mas_arena/agents/: camel.py  mad.py
mas_arena/evaluators/: aime_evaluator.py  math_evaluator.py
(+256 files in other folders)
